# aevum

./: .gitignore  CMakeLists.txt  README.md  WorkstationWellnessElf.desktop
.github/workflows/: release.yml
include/core/: ActivityMonitor.h  ConfigManager.h  DataAnalyzer.h  HealthEngine.h
include/ui/: NotificationWidget.h  SettingsDialog.h  StatisticsPanel.h  SystemTrayIcon.h
include/utils/: Logger.h  SystemUtils.h
src/: main.cpp
src/core/: ActivityMonitor.cpp  ConfigManager.cpp  DataAnalyzer.cpp  HealthEngine.cpp
src/ui/: NotificationWidget.cpp  SettingsDialog.cpp  StatisticsPanel.cpp  SystemTrayIcon.cpp
src/utils/: Logger.cpp  SystemUtils.cpp
